--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</figure>
 					<div></div>
 				</div>
-				<div class="right">
+				<div class="right posts">
 					Right
 					<div></div>
 					<div></div>
