--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
 					</figure>
 					<div></div>
 				</div>
-				<div class="right posts">
-					Right
-					<div></div>
-					<div></div>
-					<div></div>
-				</div>
+				<div class="right posts"></div>
 			</section>
 			<footer>
 				<p>© 2025 Meowbyte. All rights reserved.</p>
@@ -60,5 +55,6 @@
 			</footer>
 		</main>
 		<script src="script.js"></script>
+		<script src="posts.js"></script>
 	</body>
 </html>
