--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
 		<link rel="icon" type="image/x-icon" href="shinji.png" />
-		<title>Meowbyte</title>
+		<title>About - Meowbyte</title>
 	</head>
 	<body>
 		<main>
 			<header>
 				<span>
-					Meow<span title="Why did the byte break up with the bit? Because it needed some space!">byte</span>
+					About Meow<span title="Why did the byte break up with the bit? Because it needed some space!">byte</span>
 				</span>
 				<a href="index.html" title="Meow" class="icon">
 					<img src="cat.svg" class="accent" />
@@ -27,25 +27,23 @@
 				<a href="contact.html" title="Get in touch">Contact</a>
 			</nav>
 			<section class="banner">
-				<div class="scrolling-text">Meowbyte rocks!</div>
+				<div class="scrolling-text">Get to know Meowbyte!</div>
 			</section>
-			<section class="content">
-				<div class="left">
-					<figure>
-						<img src="shinji.png" class="accent" />
-						<a href="evangelion">
-							<figcaption>Shinji Ikari</figcaption>
-						</a>
-					</figure>
-					<div></div>
-				</div>
-				<div class="right posts"></div>
+			<section class="content about-content">
+				<h1>About Meowbyte</h1>
+				<p>Welcome to Meowbyte! This site is where my love for coding meets my love for cats.</p>
+				<p>I'm passionate about technology, programming, and sharing my favorite projects and thoughts with the world.</p>
+				<p>When I'm not coding, you'll find me watching anime, reading, or advocating for progressive causes.</p>
+				<figure>
+					<img src="shinji.png" class="accent" alt="Shinji Ikari" />
+					<figcaption>Shinji Ikari — Inspiration in many ways</figcaption>
+				</figure>
 			</section>
 			<footer>
 				<p>© 2025 Meowbyte. All rights reserved.</p>
 				<nav>
 					<a href="index.html">Home</a>
-					<a href="about.html">About</a>
+					<a href="about.html" aria-current="page">About</a>
 					<a href="favorites.html">Favorites</a>
 					<a href="blog.html">Blog</a>
 					<a href="politics.html">Politics</a>
@@ -55,6 +53,6 @@
 			</footer>
 		</main>
 		<script src="script.js"></script>
-		<script src="posts.js"></script>
 	</body>
 </html>
+
