--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<a href="favorites.html" title="All about my favorite things">Favorites</a>
 				<a href="blog.html" title="Blog posts and project updates">Blog</a>
 				<a href="politics.html" title="Yes, politics. I'm a leftist. Deal with it.">Politics</a>
+				<a href="test.html" title="I dont know what to put here">Test</a>
 				<a href="contact.html" title="Get in touch">Contact</a>
 			</nav>
 			<section class="banner">
