--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="icon" type="image/x-icon" href="shinji.png" />
+		<link rel="icon" type="image/x-icon" href="assets/shinji.png" />
 		<title>Meowbyte</title>
 	</head>
 	<body>
@@ -15,7 +15,7 @@
 					Meow<span title="Why did the byte break up with the bit? Because it needed some space!">byte</span>
 				</span>
 				<a href="index.html" title="Meow" class="icon">
-					<img src="cat.svg" class="accent" />
+					<img src="assets/cat.svg" class="accent" />
 				</a>
 			</header>
 			<nav>
@@ -33,7 +33,7 @@
 			<section class="content">
 				<div class="left">
 					<figure>
-						<img src="shinji.png" class="accent" />
+						<img src="assets/shinji.png" class="accent" />
 						<a href="evangelion">
 							<figcaption>Shinji Ikari</figcaption>
 						</a>
@@ -55,7 +55,7 @@
 				<p>Meowbyte - Where code meets cats 🐱</p>
 			</footer>
 		</main>
-		<script src="script.js"></script>
-		<script src="posts.js"></script>
+		<script src="scripts/script.js"></script>
+		<script src="scripts/posts.js" type="module"></script>
 	</body>
 </html>
