--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<p>Meowbyte - Where code meets cats 🐱</p>
 			</footer>
 		</main>
-		<script src="scripts/script.js"></script>
+		<script src="scripts/navigation.js" type="module"></script>
 		<script src="scripts/posts.js" type="module"></script>
 	</body>
 </html>
