--- a/index.html
+++ b/index.html
@@ -18,15 +18,7 @@
 					<img src="assets/cat.svg" class="accent" />
 				</a>
 			</header>
-			<nav>
-				<a href="index.html" title="Go the the homepage">Home</a>
-				<a href="about.html" title="Learn more about me">About</a>
-				<a href="favorites.html" title="All about my favorite things">Favorites</a>
-				<a href="blog.html" title="Blog posts and project updates">Blog</a>
-				<a href="politics.html" title="Yes, politics. I'm a leftist. Deal with it.">Politics</a>
-				<a href="test.html" title="I dont know what to put here">Test</a>
-				<a href="contact.html" title="Get in touch">Contact</a>
-			</nav>
+			<nav class="populate"></nav>
 			<section class="banner">
 				<div class="scrolling-text">Meowbyte rocks!</div>
 			</section>
@@ -44,14 +36,7 @@
 			</section>
 			<footer>
 				<p>© 2025 Meowbyte. All rights reserved.</p>
-				<nav>
-					<a href="index.html">Home</a>
-					<a href="about.html">About</a>
-					<a href="favorites.html">Favorites</a>
-					<a href="blog.html">Blog</a>
-					<a href="politics.html">Politics</a>
-					<a href="contact.html">Contact</a>
-				</nav>
+				<nav class="populate"></nav>
 				<p>Meowbyte - Where code meets cats 🐱</p>
 			</footer>
 		</main>
