populating other shit

--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 	</head>
 	<body>
 		<main>
-			<header>
-				<span>
-					Meow<span title="Why did the byte break up with the bit? Because it needed some space!">byte</span>
-				</span>
-				<a href="index.html" title="Meow" class="icon">
-					<img src="assets/cat.svg" class="accent" />
-				</a>
-			</header>
+			<header class="populate"></header>
 			<nav class="populate"></nav>
 			<section class="banner">
 				<div class="scrolling-text">Meowbyte rocks!</div>
@@ -34,12 +27,9 @@
 				</div>
 				<div class="right posts"></div>
 			</section>
-			<footer>
-				<p>© 2025 Meowbyte. All rights reserved.</p>
-				<nav class="populate"></nav>
-				<p>Meowbyte - Where code meets cats 🐱</p>
-			</footer>
+			<footer class="populate"></footer>
 		</main>
+		<script src="scripts/populate.js"></script>
 		<script src="scripts/navigation.js" type="module"></script>
 		<script src="scripts/posts.js" type="module"></script>
 	</body>
