--- a/about.html
+++ b/about.html
@@ -4,55 +4,28 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
-		<link rel="icon" type="image/x-icon" href="shinji.png" />
+		<link rel="stylesheet" href="styles/styles.css" />
+		<link rel="icon" type="image/x-icon" href="assets/shinji.png" />
 		<title>About - Meowbyte</title>
 	</head>
 	<body>
 		<main>
-			<header>
-				<span>
-					About Meow<span title="Why did the byte break up with the bit? Because it needed some space!">byte</span>
-				</span>
-				<a href="index.html" title="Meow" class="icon">
-					<img src="cat.svg" class="accent" />
-				</a>
-			</header>
-			<nav>
-				<a href="index.html" title="Go the the homepage">Home</a>
-				<a href="about.html" title="Learn more about me">About</a>
-				<a href="favorites.html" title="All about my favorite things">Favorites</a>
-				<a href="blog.html" title="Blog posts and project updates">Blog</a>
-				<a href="politics.html" title="Yes, politics. I'm a leftist. Deal with it.">Politics</a>
-				<a href="contact.html" title="Get in touch">Contact</a>
-			</nav>
-			<section class="banner">
-				<div class="scrolling-text">Get to know Meowbyte!</div>
-			</section>
+			<header class="populate"></header>
+			<nav class="populate"></nav>
 			<section class="content about-content">
 				<h1>About Meowbyte</h1>
 				<p>Welcome to Meowbyte! This site is where my love for coding meets my love for cats.</p>
-				<p>I'm passionate about technology, programming, and sharing my favorite projects and thoughts with the world.</p>
-				<p>When I'm not coding, you'll find me watching anime, reading, or advocating for progressive causes.</p>
-				<figure>
-					<img src="shinji.png" class="accent" alt="Shinji Ikari" />
-					<figcaption>Shinji Ikari — Inspiration in many ways</figcaption>
-				</figure>
+				<p>
+					I'm passionate about technology, programming, and sharing my favorite projects and thoughts with the
+					world.
+				</p>
+				<p>
+					When I'm not coding, you'll find me watching anime, reading, or advocating for progressive causes.
+				</p>
 			</section>
-			<footer>
-				<p>© 2025 Meowbyte. All rights reserved.</p>
-				<nav>
-					<a href="index.html">Home</a>
-					<a href="about.html" aria-current="page">About</a>
-					<a href="favorites.html">Favorites</a>
-					<a href="blog.html">Blog</a>
-					<a href="politics.html">Politics</a>
-					<a href="contact.html">Contact</a>
-				</nav>
-				<p>Meowbyte - Where code meets cats 🐱</p>
-			</footer>
+			<footer class="populate"></footer>
 		</main>
-		<script src="script.js"></script>
+		<script src="scripts/populate.js"></script>
+		<script src="scripts/navigation.js" type="module"></script>
 	</body>
 </html>
-
