--- a/about.html
+++ b/about.html
@@ -6,26 +6,135 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles/styles.css" />
 		<link rel="icon" type="image/x-icon" href="assets/shinji.png" />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+		/>
+
 		<title>About - Meowbyte</title>
 	</head>
 	<body>
 		<main>
-			<header class="populate"></header>
+			<header class="populate main"></header>
 			<nav class="populate"></nav>
-			<section class="content about-content">
-				<h1>About Meowbyte</h1>
-				<p>Welcome to Meowbyte! This site is where my love for coding meets my love for cats.</p>
-				<p>
-					I'm passionate about technology, programming, and sharing my favorite projects and thoughts with the
-					world.
-				</p>
-				<p>
-					When I'm not coding, you'll find me watching anime, reading, or advocating for progressive causes.
-				</p>
+			<section class="content">
+				<div class="left">
+					<figure>
+						<img src="assets/shinji.png" class="accent" />
+						<a href="evangelion">
+							<figcaption>The one and only</figcaption>
+						</a>
+					</figure>
+					<div class="container info">
+						<header class="sub">About Meowbyte</header>
+						<div>
+							<p class="bold">Name</p>
+							<p class="random-select">
+								<span class="random-child">Meowbyte</span>
+								<span class="random-child">Finch</span>
+								<span class="random-child">Finchasaurus</span>
+								<span class="random-child">[REDACTED]</span>
+								<span class="random-child">[REDACTED]</span>
+								<span class="random-child">[REDACTED]</span>
+							</p>
+						</div>
+						<div>
+							<p class="bold">Age</p>
+							<p>21</p>
+						</div>
+						<div>
+							<p class="bold">Location</p>
+							<p>SL, UT, USA</p>
+						</div>
+						<div>
+							<p class="bold">Work</p>
+							<p>SLC</p>
+						</div>
+						<div>
+							<p class="bold">School</p>
+							<p>UofU</p>
+						</div>
+					</div>
+				</div>
+				<div class="right">
+					<div class="static-banner">
+						<div class="continuous-scrolling-text">
+							<div
+								class="scrolling-content"
+								title="I think it's hilarious to add as many icons as possible"
+							>
+								<span class="tech-icon"><i class="devicon-typescript-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-javascript-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-java-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-json-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-lua-plain"></i></span>
+								<span class="tech-icon"
+									><img src="assets/luau.png" alt="Luau Logo" class="accent"
+								/></span>
+								<span class="tech-icon"><i class="devicon-blender-original"></i></span>
+								<span class="tech-icon"><i class="devicon-c-original"></i></span>
+								<span class="tech-icon"><i class="devicon-cplusplus-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-csharp-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-clion-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-cmake-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-firefox-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-git-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-github-original"></i></span>
+								<span class="tech-icon"><i class="devicon-linux-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-markdown-original"></i></span>
+								<span class="tech-icon"><i class="devicon-npm-original-wordmark"></i></span>
+								<span class="tech-icon"><i class="devicon-opengl-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-vulkan-original"></i></span>
+								<span class="tech-icon"><i class="devicon-react-original"></i></span>
+								<span class="tech-icon"><i class="devicon-unity-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-unrealengine-original"></i></span>
+								<span class="tech-icon"><i class="devicon-vscode-plain"></i></span>
+							</div>
+							<div
+								class="scrolling-content"
+								title="I think it's hilarious to add as many icons as possible"
+							>
+								<span class="tech-icon"><i class="devicon-typescript-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-javascript-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-java-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-json-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-lua-plain"></i></span>
+								<span class="tech-icon"
+									><img src="assets/luau.png" alt="Luau Logo" class="accent"
+								/></span>
+								<span class="tech-icon"><i class="devicon-blender-original"></i></span>
+								<span class="tech-icon"><i class="devicon-c-original"></i></span>
+								<span class="tech-icon"><i class="devicon-cplusplus-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-csharp-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-clion-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-cmake-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-firefox-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-git-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-github-original"></i></span>
+								<span class="tech-icon"><i class="devicon-linux-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-markdown-original"></i></span>
+								<span class="tech-icon"><i class="devicon-npm-original-wordmark"></i></span>
+								<span class="tech-icon"><i class="devicon-opengl-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-vulkan-original"></i></span>
+								<span class="tech-icon"><i class="devicon-react-original"></i></span>
+								<span class="tech-icon"><i class="devicon-unity-plain"></i></span>
+								<span class="tech-icon"><i class="devicon-unrealengine-original"></i></span>
+								<span class="tech-icon"><i class="devicon-vscode-plain"></i></span>
+							</div>
+						</div>
+					</div>
+					<article class="about-text">
+						I make computers create images at 60 frames per second and sometimes push limits on Roblox. I
+						promise I'm not a fed even tho I work for the government.
+					</article>
+				</div>
 			</section>
+
 			<footer class="populate"></footer>
 		</main>
 		<script src="scripts/populate.js"></script>
 		<script src="scripts/navigation.js" type="module"></script>
+		<script src="scripts/random.js"></script>
 	</body>
 </html>
