--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<main>
-			<header class="populate"></header>
+			<header class="populate main"></header>
 			<nav class="populate"></nav>
 			<section class="banner">
 				<div class="scrolling-text">Meowbyte rocks!</div>
