--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 				<div class="left">
 					<figure>
 						<img src="assets/shinji.png" class="accent" />
-						<a href="evangelion">
+						<a href="meowbox.html">
 							<figcaption>The one and only</figcaption>
 						</a>
 					</figure>
@@ -30,7 +30,7 @@
 						<header class="sub">About Meowbyte</header>
 						<div>
 							<p class="bold">Name</p>
-							<p class="random-select">
+							<p class="small random-select">
 								<span class="random-child">Meowbyte</span>
 								<span class="random-child">Finch</span>
 								<span class="random-child">Finchasaurus</span>
@@ -41,19 +41,21 @@
 						</div>
 						<div>
 							<p class="bold">Age</p>
-							<p>21</p>
+							<p class="small">21</p>
 						</div>
 						<div>
 							<p class="bold">Location</p>
-							<p>SL, UT, USA</p>
+							<p class="small">SL, UT, USA</p>
 						</div>
-						<div>
+						<div
+							title="The obligatory disclaimer: My opinions are my own and do not reflect the views of my employer."
+						>
 							<p class="bold">Work</p>
-							<p>SLC</p>
+							<p class="small">SLC</p>
 						</div>
 						<div>
 							<p class="bold">School</p>
-							<p>UofU</p>
+							<p class="small">UofU</p>
 						</div>
 					</div>
 				</div>
@@ -70,10 +72,13 @@
 							></div>
 						</div>
 					</div>
-					<article class="about-text">
-						I make computers create images at 60 frames per second and sometimes push limits on Roblox. I
-						promise I'm not a fed even tho I work for the government.
-					</article>
+					<div class="about-text">
+						I make computers create images at 60 frames per second and sometimes push limits on Roblox.
+					</div>
+					<div>I promise I'm not a fed even tho I work for the government.</div>
+					<div>I break games for fun, then act surprised when they break back.</div>
+					<div>Half programmer, half chaos engine.</div>
+					<div>If it lags or crashes, it's probably my fault.</div>
 				</div>
 			</section>
 
