--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 					</div>
 				</div>
 				<div class="right">
-					<div class="static-banner">
+					<!-- <div class="static-banner">
 						<div class="continuous-scrolling-text">
 							<div
 								class="populate scrolling-content"
@@ -71,14 +71,28 @@
 								title="I think it's hilarious to add as many icons as possible"
 							></div>
 						</div>
+					</div> -->
+					<div>
+						Hello, I'm Finch. I'm a 21-year-old developer based in Salt Lake City, Utah. I'm an aromantic,
+						asexual, agender, autistic, and adhder. I love cats, video games, programming, and computer
+						science. I'm currently studying Computer Science at the University of Utah and work with my
+						local government. This website is just a fun side project where I can share my thoughts,
+						projects, random musings with the world while learning web development. Feel free to explore the
+						site and check out my blog posts.
+					</div>
+					<div>
+						There's not much here yet, but soon enough you can poke around and find secrets hidden around
+						ever corner.
 					</div>
 					<div class="about-text">
-						I make computers create images at 60 frames per second and sometimes push limits on Roblox.
+						<div>
+							I make computers create images at 60 frames per second and sometimes push limits on Roblox.
+						</div>
+						<div>I promise I'm not a fed even tho I work for the government.</div>
+						<div>I break games for fun, then act surprised when they break back.</div>
+						<div>Half programmer, half chaos engine.</div>
+						<div>If it lags or crashes, it's probably my fault.</div>
 					</div>
-					<div>I promise I'm not a fed even tho I work for the government.</div>
-					<div>I break games for fun, then act surprised when they break back.</div>
-					<div>Half programmer, half chaos engine.</div>
-					<div>If it lags or crashes, it's probably my fault.</div>
 				</div>
 			</section>
 
