--- a/index.html
+++ b/index.html
@@ -23,7 +23,48 @@
 							<figcaption>Shinji Ikari</figcaption>
 						</a>
 					</figure>
-					<div></div>
+					<div class="pollcode">
+						<form method="post" action="https://poll.pollcode.com/55176963">
+							<div
+								style="
+									background-color: #eeeeee;
+									padding: 2px;
+									width: 175px;
+									font-family: Arial;
+									font-size: small;
+									color: #000000;
+								"
+							>
+								<div style="padding: 2px 0px 4px 2px"><strong>Test</strong></div>
+								<input
+									type="radio"
+									name="answer"
+									value="1"
+									id="answer551769631"
+									style="float: left"
+								/><label for="answer551769631" style="float: left; width: 150px">Yes</label>
+								<div style="clear: both; height: 2px"></div>
+								<input
+									type="radio"
+									name="answer"
+									value="2"
+									id="answer551769632"
+									style="float: left"
+								/><label for="answer551769632" style="float: left; width: 150px">No</label>
+								<div style="clear: both; height: 2px"></div>
+								<div align="center" style="padding: 3px">
+									<input type="submit" value=" Vote " />&nbsp;<input
+										type="submit"
+										name="view"
+										value=" View "
+									/>
+								</div>
+								<div align="right" style="font-size: 10px">
+									pollcode.com <a href="https://pollcode.com/">free polls</a>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
 				<div class="right posts"></div>
 			</section>
